# TableExtractor

./: .env.example  .gitignore  Dockerfile  docker-compose.yaml  document_info.json  main.py  pyproject.toml  requirements.txt  table_extractor.conf  wsgi.py
api/: app.py  settings.py
api/services/: views.py
api/table_extractor/: views.py
api/text_extractor/: views.py
scripts/: test_pdf.py
tools/: models.py  table_extractor.py  utils.py
