[tool.poetry]
name = "tableextractor"
version = "0.1.0"
description = ""
authors = ["Blissbill <ne.rom4nov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pymupdf = "^1.22.1"
numpy = "^1.24.2"
opencv-python = "^4.7.0.72"
pydantic = "^1.10.7"
pandas = "^2.0.1"
flask = "^2.3.2"
easyocr = "^1.7.0"
torch = [
  {url = "https://download.pytorch.org/whl/cpu-cxx11-abi/torch-2.0.0%2Bcpu.cxx11.abi-cp310-cp310-linux_x86_64.whl", markers = "sys_platform == 'linux'"}
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
